@@ -126,6 +126,11 @@ G_CONST_RETURN gchar *gst_plugin_feature_get_name	(GstPluginFeature *feature);
 
 void            gst_plugin_feature_list_free            (GList *list);
 
+gboolean        gst_plugin_feature_check_version        (GstPluginFeature *feature,
+                                                         guint             min_major,
+                                                         guint             min_minor,
+                                                         guint             min_micro);
+
 G_END_DECLS
 
 
